--- a/style.css
+++ b/style.css
@@ -657,6 +657,23 @@ body {
     display: flex;
 }
 
+.home-page {
+    /* Make the page fill the viewport */
+    width: 100%;
+    height: 100vh;
+    position: relative; /* so the absolute container fits nicely within */
+    display: flex;
+    justify-content: center; /* horizontally centre child elements */
+    align-items: center;     /* vertically centre child elements */
+  }
+  
+  .home-content {
+    /* Ensure this is above the -1 container */
+    z-index: 1; 
+    text-align: center; /* Centre the text lines if you want */
+  }
+  
+
 .container {
     display: flex;
     height: 100vh;
@@ -1274,17 +1291,16 @@ main {
     line-height: 1.4;
 }
 
-/* 
-.version-info {
-    margin-top: 1rem;   
-    font-size: 1rem;    
-    color: #666;       
-  }
-   */
+
 
   .version-info {
     margin-top: 1rem;
     font-size: var(--version-info-font-size);
     color: var(--text-color); 
   }
+  
+
+
+
+
   
